--- a/feedback.css
+++ b/feedback.css
@@ -5,17 +5,22 @@
 }
 
 body {
-	background: #E6E6FA;
+	background-image: url('images/background1.jpg');
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	font-family: "Poppins", sans-serif;
-	min-height: 100vh;
+	min-height: 90vh;
+	/* margin:auto; */
 }
 
 .container {
-	background-color: #305d76;
-    border: 3px solid #003066;
+	background-color: #003a5a4a;
+	border: 2px solid #002f64;
 	border-radius: 10px;
 	box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
 	display: flex;
@@ -29,7 +34,7 @@ body {
 }
 
 .container p {
-	color: rgb(136, 136, 136);
+	color: white;
 	letter-spacing: 0.4px;
 }
 
@@ -48,34 +53,41 @@ body {
 	height: 80px;
 }
 
-.container input, .container textarea {
-  position: absolute;
+.container input,
+.container textarea {
+	position: absolute;
 	display: block;
 	font-family: "Poppins", sans-serif;
-	font-size: 14px;
-	padding: 12px;
-	height: 100%;
 	width: 100%;
-  border: 1px solid #999;
-  border-radius: 4px;
-  outline: none;
-  resize: none;
+	padding: 0.75rem;
+	border: 1px solid #2b72ffab;
+	border-radius: 0.5rem;
+	font-size: 1rem;
+	transition: border-color 0.2s;
 }
 
+input:focus {
+	outline: none;
+	border-color: #17222f;
+	box-shadow: 0 0 0 3px rgba(96, 165, 250, 0.2);
+}
+
+
 .container .sendbtn {
-  display: block;
-  width: 100%;
+	display: block;
+	width: 60%;
 	background: #660033;
 	color: #fff;
 	font-size: 18px;
 	padding: 11px;
-  border: none;
-	border-radius: 4px;
-  cursor: pointer;
+	border: none;
+	border-radius: 48px;
+	cursor: pointer;
+	margin: auto;
 }
 
 .container .sendbtn:hover {
-  background-color: #993366;
+	background-color: #993366;
 }
 
 @media screen and (max-width: 600px) {
@@ -90,7 +102,7 @@ body {
 	bottom: 80px;
 	transform: translateX(100%);
 	transition: transform 0.4s ease-in-out;
-  z-index: 10;
+	z-index: 10;
 }
 
 .social-container.visible {
@@ -143,7 +155,7 @@ body {
 	display: flex;
 	list-style-type: none;
 	padding: 0;
-  margin-top: 58px;
+	margin-top: 58px;
 }
 
 .custom-social-container ul li {
