--- a/sing.css
+++ b/sing.css
@@ -14,8 +14,7 @@ body {
     flex-direction: column;
     font-family: 'Montserrat', sans-serif;
     height: 100vh;
-    background-image: linear-gradient(rgba(255,255,255,0.9), rgba(255,255,255,0.9)), 
-                      url('https://images.unsplash.com/photo-1468421870903-4df1664ac249');
+    background-image:url('images/background1.jpg');
     background-size: cover;
 }
 
